<resources>
    <string name="app_name">Assignment 2</string>

    <string name="productID">Product ID:</string>
    <string name="productName">Product Name: </string>
    <string name="description">Description:</string>
    <string name="price">Price: CAD</string>
    <string name="priceBtc">Price: BTC</string>
    <string name="nextProduct">Next</string>
    <string name="prevProduct">Prev</string>
    <string name="btnDelete">Delete</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnCreate">Add Product</string>

    <string name="hintName">Product Name</string>
    <string name="hintDesc">Product Description</string>
    <string name="hintPrice">Price in CAD</string>

    <string name="preparing">Preparing to test database operations</string>
    <string name="error">There was an error when performing database operations</string>
    <string name="success">Database operations have been completed successfully</string>

    <string name="action_settings">Settings</string>
    <string name="action_create">Add New Product</string>
    <string name="title_activity_create_product">CreateProductActivity</string>
    <string name="add_product">Add Product</string>
</resources>
